# My-Site

./: .gitignore  README.md  app.py  docker-compose.yaml  index.html  pyproject.toml
frontend/: index.html
frontend/tutorials/static/: style.css
src/: docker-compose.yaml  mysite.py
src/backend/: Dockerfile  auth.py  default_database.tar  mysite.py  pyproject.toml  utils.py
src/backend/app/: auth.py  main.py  utils.py
src/frontend/: .dockerignore  Dockerfile  package-lock.json
src/frontend/public/: index.html
src/frontend/src/: App.js  Plate.js  Resources.js  app.js  index.js
static/: script.js  style.css
static_old/static/: script.js
tutorials/: BasicNetworking.html  index.html
tutorials/static/: style.css
